--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 DB_URI=postgresql://heroes:heroes@postgres/heroes
 FLASK_DEBUG=1
-CORS_ALLOWED_ORIGINS=http://localhost:4200
+CORS_ALLOWED_ORIGINS=http://localhost:4200,*
